Reflective access fixes